SERVER-35619 Do not hold ShardRegistryData::_mutex while trying to take ScanningReplicaSetMonitor::SetState::mutex